--- a/education/edu.css
+++ b/education/edu.css
@@ -18,7 +18,8 @@ body{
     gap:75px;
     display:flex;
     justify-content: center;
-    padding: 10px
+    padding: 10px;
+    margin-bottom: 20px;
     
 
 }
